Trying something hope nothing goes wrong

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "fortawesome",
         "hdurl",
         "josefin",
-        "webfontloader"
+        "npod",
+        "webfontloader",
+        "webfonts"
     ]
 }
